# oncall-agent-rs

./: .env.example  .gitignore  Cargo.toml  README.md  RUST_MIGRATION.md
data/chat-history/: c2Vzc2lvbl93ZXozYTBxbnlfMTc4MTg3ODg3NjIxNQ.json  c2Vzc2lvbl9xdXk3c2wyNmRfMTc4MTg3ODg0NDQyNw.json
examples/: probe_responses.rs
prompts/: chat-system-prompt.txt
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src/agent/: evidence.rs  logs_tools.rs  metrics_tools.rs  mod.rs
src/domain/: chat.rs  diagnosis.rs  document.rs  incident.rs  memory.rs  mod.rs  rag.rs
src/http/: dto.rs
src/http/routes/: chat.rs  health.rs  incidents.rs  knowledge.rs  metrics.rs  mod.rs  upload.rs
src/routes/: chat.rs  health.rs  incidents.rs  metrics.rs
src/services/: agent_runtime.rs  ai_ops_service.rs  alert_service.rs  chat_history_store.rs  chat_service.rs  diagnosis_report_service.rs  document_chunk_service.rs  incident_service.rs  index_task_status_service.rs  memory_extraction_service.rs  milvus_service.rs  mod.rs  openai_responses_rectifier.rs  session_manager.rs  vector_embedding_service.rs  vector_index_service.rs  vector_rerank_service.rs  vector_search_service.rs
static/: app.js  index.html  styles.css
tests/: api_smoke.rs
