[package]
name = "oncall-agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
futures-util = "0.3"
redis = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rig-core = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tower-http = { version = "0.7", features = ["cors", "fs", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
